Fix light mode background contrast in home widgets

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,8 @@
 }
 
 .theme-light .bg-\[\#0A1628\],
+.theme-light .bg-\[\#0A1628\]\/45,
+.theme-light .bg-\[\#0A1628\]\/60,
 .theme-light .bg-\[\#0A1628\]\/70,
 .theme-light .bg-\[\#0A1628\]\/85,
 .theme-light .bg-\[\#0A1628\]\/90 {
